# waffle-scheme

./: Cargo.toml  README.md  build.rs  clos.scm  core.scm  file.scm  foo.scm  out
core/: lists.scm  macros.scm  parameter.scm  primitives.scm
src/: bytecompiler.rs  compiler.rs  disasm.rs  fnv.rs  gc.rs  gc_bdwgc.rs  hash.rs  init.rs  jit.rs  lib.rs  main.rs  math.rs  method_jit.rs  runtime.rs  sexp.rs  tracing_jit.rs  vec.rs  vector.rs  vm.rs
src/gc/: allocator.rs  bitfield.rs  bitmap.rs  mmap.rs  stack.rs  type_id.rs
src/jit/: bc2lbc.rs  lbc.rs
src/jit/c0/: arm64_decl.rs  mod.rs
src/jit/c1/: mod.rs  translate.rs
src/method_jit/: lir.rs  lower.rs
src/runtime/: arith.rs  interpreter.rs  subr_arith.rs  subr_inline.rs  syntax_rules.rs  threading.rs  value.rs  vm.rs
src/tracing_jit/: record.rs  trace_ir.rs
src/vm/: compiler.rs  opcodes.rs  parse.rs
stdlib/: core.scm
stdlib/core/: parameter.scm
