[package]
name = "waffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comet = { git = "https://github.com/starlight-js/comet" }
comet-extra = { git = "https://github.com/starlight-js/comet" }

lexpr = "0.2"
alloca = "*"
num = "0.4"
parking_lot = "0.12"
target-lexicon = "0.12"
cranelift = "0.81"
cranelift-jit = "0.81"
cranelift-module = "0.81"
libc = "0.2"
cranelift-preopt = "0.81"
bad64 = "0.6"
capstone = "0.10"
memoffset = "0.6"
rustyline = "9.1"
structopt = "0.3"
[features]
minimark = []
immix = []
semispace = []
marksweep = []
default = ["immix"]
