[package]
name = "waffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
mopa = "0.2"
modular-bitfield = "0.11"
indexmap = "1.8"
memoffset = { version = "0.6", features = ["unstable_const"] }
memx = "0.1"
paste = "1.0"
lexpr = "0.2"
[features]
track-source = []
green-threads = []
bdwgc = []
default = []
